[gd_scene load_steps=15 format=4 uid="uid://bp3plwo8243wy"]

[ext_resource type="Script" uid="uid://c65lao1k8q5b1" path="res://rooms/level.gd" id="1_ar4t0"]
[ext_resource type="Texture2D" uid="uid://cdnunui18bx10" path="res://assets/generic/pixel.png" id="2_4ve75"]
[ext_resource type="PackedScene" uid="uid://v0qlcyty6g8i" path="res://scenes/tilemap/tilemap.tscn" id="3_tibj6"]
[ext_resource type="PackedScene" uid="uid://b1mxsisctpeug" path="res://scenes/player/player.tscn" id="5_dg3qb"]
[ext_resource type="PackedScene" uid="uid://bt1awmtu5v0rs" path="res://scenes/key/key.tscn" id="9_knkn0"]
[ext_resource type="FontFile" uid="uid://cfylsgfwp1fy4" path="res://assets/fonts/GAMEPLAY-1987.ttf" id="10_at2w1"]
[ext_resource type="FontFile" uid="uid://dtec4w8hxc3v4" path="res://assets/fonts/hefty-me.ttf" id="10_yhl0x"]
[ext_resource type="PackedScene" uid="uid://c8geeqbbs3mvq" path="res://scenes/hit-area/goal.tscn" id="11_2cqxi"]
[ext_resource type="FontFile" uid="uid://bor1qax0ecsmb" path="res://assets/fonts/mania.ttf" id="11_at2w1"]
[ext_resource type="Texture2D" uid="uid://cn4iikkntcgoa" path="res://assets/results-background.png" id="12_wrbck"]
[ext_resource type="FontFile" uid="uid://c80aa3bvmohf8" path="res://assets/fonts/RacingMarkRace-Regular.otf" id="14_4r1re"]
[ext_resource type="Texture2D" uid="uid://bucoma1fat6is" path="res://assets/banner.png" id="15_mlrue"]
[ext_resource type="Texture2D" uid="uid://cpjag6sp0qyhn" path="res://assets/icons/x_button.png" id="18_fei6a"]
[ext_resource type="Texture2D" uid="uid://v3u8y2amcuwn" path="res://assets/icons/c_button.png" id="19_dsxex"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("goal", "keys_parent")]
script = ExtResource("1_ar4t0")
goal = NodePath("Goal")
keys_parent = NodePath("Keys")
limit_top = -20
limit_left = -20
limit_bottom = 260
limit_right = 340
metadata/_edit_horizontal_guides_ = [120.0, 240.0, -256.0, 0.0]
metadata/_edit_vertical_guides_ = [160.0, 320.0, 0.0]

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.266667, 0.266667, 0.266667, 1)
z_index = -10
scale = Vector2(320, 240)
texture = ExtResource("2_4ve75")
centered = false

[node name="Tilemap" parent="." instance=ExtResource("3_tibj6")]

[node name="Background" parent="Tilemap/BackgroundParallax" index="0"]
tile_map_data = PackedByteArray("AAACAAIAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAEAAMAAAADAAIAAAAEAAQAAAABAAAAAAADAAQAAAABAAAAAAADAAUAAAACAAMAAAAEAAUAAAABAAAAAAAFAAQAAAADAAIAAAAFAAUAAAABAAAAAAAFAAYAAAABAAAAAAAFAAcAAAABAAAAAAAGAAYAAAABAAAAAAAGAAcAAAABAAAAAAAGAAgAAAABAAAAAAAHAAgAAAABAAAAAAAGAAkAAAABAAAAAAAGAAoAAAABAAAAAAAHAAoAAAABAAAAAAAIAAoAAAADAAQAAAAIAAsAAAABAAAAAAAIAAwAAAACAAEAAAAJAAwAAAABAAAAAAAJAAsAAAADAAIAAAAIAA0AAAABAAAAAAAJAA0AAAABAAAAAAAKAA0AAAADAAIAAAAIAAgAAAABAAAAAAAHAAkAAAABAAAAAAAGAAsAAAABAAAAAAAGAAwAAAACAAMAAAAHAAwAAAABAAAAAAAHAAsAAAABAAAAAAAFAAgAAAACAAMAAAAEAAcAAAACAAMAAAAEAAYAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAIAAcAAAABAAAAAAAIAAYAAAABAAAAAAAJAAYAAAABAAAAAAAKAAYAAAABAAAAAAALAAYAAAABAAAAAAAMAAYAAAABAAAAAAANAAYAAAABAAAAAAAOAAYAAAABAAAAAAAOAAcAAAABAAAAAAANAAcAAAABAAAAAAALAAcAAAABAAAAAAAKAAcAAAABAAAAAAAJAAgAAAABAAAAAAAKAAgAAAABAAAAAAALAAgAAAABAAAAAAAMAAgAAAADAAMAAAAMAAcAAAABAAAAAAANAAUAAAABAAAAAAAMAAUAAAABAAAAAAALAAUAAAABAAAAAAAKAAUAAAACAAIAAAAOAAUAAAABAAAAAAAPAAUAAAABAAAAAAAMAAEAAAABAAAAAAAMAAIAAAABAAAAAAANAAIAAAABAAAAAAANAAMAAAABAAAAAAAOAAMAAAABAAAAAAAPAAMAAAADAAIAAAAOAAQAAAAAAAEAAAAPAAQAAAABAAAAAAAQAAUAAAADAAIAAAAPAAYAAAABAAAAAAAQAAYAAAABAAAAAAAQAAcAAAABAAAAAAARAAcAAAABAAAAAAAQAAgAAAACAAMAAAARAAgAAAABAAAAAAARAAkAAAACAAMAAAASAAkAAAABAAAAAAASAAoAAAACAAMAAAASAAgAAAABAAAAAAASAAcAAAABAAAAAAARAAYAAAADAAIAAAAPAAcAAAABAAAAAAAMAAMAAAACAAMAAAALAAIAAAACAAMAAAALAAEAAAABAAAAAAANAAEAAAADAAIAAAANAAQAAAABAAAAAAAJAAcAAAABAAEAAAADAAIAAAADAAIAAAACAAQAAAACAAMAAAAHAA0AAAACAAMAAAAOAAIAAAADAAIAAAANAAgAAAAJAAcAAAAIAAkAAAALAAcAAAAPAAgAAAAIAAcAAAAQAAkAAAAIAAcAAAARAAoAAAAIAAcAAAASAAsAAAAIAAcAAAAKAAwAAAAJAAYAAAALAA0AAAAJAAYAAAAGAA0AAAAIAAcAAAAFAAkAAAAIAAcAAAAEAAgAAAAIAAcAAAADAAYAAAAIAAcAAAACAAUAAAAIAAcAAAAEAAIAAAAJAAYAAAAFAAMAAAAJAAYAAAAGAAUAAAAJAAYAAAAJAAUAAAAIAAYAAAAOAAEAAAAJAAYAAAAPAAIAAAAJAAYAAAAQAAQAAAAJAAYAAAARAAUAAAAJAAYAAAASAAYAAAAJAAYAAAALAAMAAAAIAAcAAAAJAAoAAAAJAAYAAAAMAAQAAAAKAAYAAAA=")

[node name="Foreground" parent="Tilemap/ForegroundParallax" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAAAAAoAAAABAAAAAAAAAAsAAAABAAAAAAAAAAwAAAABAAAAAAAAAA0AAAABAAAAAAAAAA4AAAABAAAAAAABAA4AAAABAAAAAAACAA4AAAABAAAAAAADAA4AAAABAAAAAAAEAA4AAAABAAAAAAAFAA4AAAABAAAAAAAGAA4AAAABAAAAAAAHAA4AAAABAAAAAAAIAA4AAAABAAAAAAAJAA4AAAABAAAAAAAKAA4AAAABAAAAAAALAA4AAAABAAAAAAAMAA4AAAABAAAAAAANAA4AAAABAAAAAAAOAA4AAAABAAAAAAAPAA4AAAABAAAAAAAQAA4AAAABAAAAAAARAA4AAAABAAAAAAASAA4AAAABAAAAAAATAA4AAAABAAAAAAATAAAAAAABAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAQAAAABAAAAAAATAAUAAAABAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAATAAgAAAABAAAAAAATAAkAAAABAAAAAAATAAoAAAABAAAAAAATAAsAAAABAAAAAAATAAwAAAABAAAAAAATAA0AAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAABAAEAAAABAAEAAAASAA0AAAABAAEAAAABAA0AAAAAAAEAAAASAAEAAAAAAAEAAAACAAEAAAABAAAAAAABAAIAAAABAAAAAAADAAEAAAADAAcAAAABAAMAAAADAAcAAAACAAIAAAADAAcAAAARAAEAAAABAAAAAAASAAIAAAABAAAAAAAQAAEAAAACAAcAAAARAAIAAAACAAcAAAASAAMAAAACAAcAAAABAAwAAAABAAAAAAACAAwAAAADAAYAAAACAA0AAAABAAAAAAARAA0AAAABAAAAAAASAAwAAAABAAAAAAARAAwAAAACAAYAAAAIAAEAAAACAAcAAAAJAAEAAAAJAAAAAAAKAAEAAAAIAAAAAAALAAEAAAADAAcAAAAJAAIAAAACAAcAAAAKAAIAAAADAAcAAAADAA0AAAAJAAQAAAABAAsAAAAJAAQAAAAQAA0AAAAIAAQAAAASAAsAAAAIAAQAAAABAAQAAAAJAAcAAAACAAMAAAAJAAcAAAADAAIAAAAJAAcAAAAEAAEAAAAJAAcAAAAPAAEAAAAIAAcAAAAQAAIAAAAIAAcAAAARAAMAAAAIAAcAAAASAAQAAAAIAAcAAAAHAAEAAAAIAAcAAAAIAAIAAAAIAAcAAAALAAIAAAAJAAcAAAAMAAEAAAAJAAcAAAAJAAMAAAAEAAAAAAAKAAMAAAAFAAEAAAAJAAQAAAAIAAUAAAAKAAQAAAAJAAUAAAAFAAYAAAABAAAAAAAFAAcAAAAIAAUAAAAGAAcAAAAJAAUAAAAJAAkAAAABAAAAAAAKAAkAAAABAAAAAAAKAAoAAAAIAAEAAAALAAoAAAADAAcAAAAMAAoAAAAJAAcAAAAOAAcAAAAIAAUAAAAPAAcAAAAJAAUAAAAEAAYAAAAAAAQAAAAFAAUAAAADAAAAAAAGAAYAAAABAAUAAAAHAAkAAAACAAQAAAAIAAkAAAABAAAAAAAJAAgAAAACAAQAAAAKAAgAAAADAAQAAAALAAkAAAABAAAAAAAMAAkAAAABAAUAAAANAAYAAAAAAAQAAAAOAAYAAAABAAAAAAAPAAYAAAABAAUAAAAGAAoAAAABAAAAAAAGAAkAAAAIAAYAAAAHAAoAAAADAAUAAAAIAAgAAAAIAAYAAAALAAgAAAAJAAYAAAAIAAoAAAAJAAcAAAAFAAoAAAAAAAQAAAAAAP//AAABAAAAAAABAP//AAABAAAAAAACAP//AAABAAAAAAADAP//AAABAAAAAAAEAP//AAABAAAAAAAFAP//AAABAAAAAAAGAP//AAABAAAAAAAHAP//AAABAAAAAAAIAP//AAABAAAAAAAJAP//AAABAAAAAAAKAP//AAABAAAAAAALAP//AAABAAAAAAAMAP//AAABAAAAAAANAP//AAABAAAAAAAOAP//AAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAARAP//AAABAAAAAAASAP//AAABAAAAAAATAP//AAABAAAAAAAUAP//AAABAAAAAAAUAAAAAAABAAAAAAAUAAEAAAABAAAAAAAUAAIAAAABAAAAAAAUAAMAAAABAAAAAAAUAAQAAAABAAAAAAAUAAUAAAABAAAAAAAUAAYAAAABAAAAAAAUAAcAAAABAAAAAAAUAAgAAAABAAAAAAAUAAkAAAABAAAAAAAUAAoAAAABAAAAAAAUAAsAAAABAAAAAAAUAAwAAAABAAAAAAAUAA0AAAABAAAAAAAUAA4AAAABAAAAAAAUAA8AAAABAAAAAAD//w8AAAABAAAAAAAAAA8AAAABAAAAAAABAA8AAAABAAAAAAACAA8AAAABAAAAAAADAA8AAAABAAAAAAAEAA8AAAABAAAAAAAFAA8AAAABAAAAAAAGAA8AAAABAAAAAAAHAA8AAAABAAAAAAAIAA8AAAABAAAAAAAJAA8AAAABAAAAAAAKAA8AAAABAAAAAAALAA8AAAABAAAAAAAMAA8AAAABAAAAAAANAA8AAAABAAAAAAAOAA8AAAABAAAAAAAPAA8AAAABAAAAAAAQAA8AAAABAAAAAAARAA8AAAABAAAAAAASAA8AAAABAAAAAAATAA8AAAABAAAAAAD/////AAABAAAAAAD//wAAAAABAAAAAAD//wEAAAABAAAAAAD//wIAAAABAAAAAAD//wMAAAABAAAAAAD//wQAAAABAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD//wgAAAABAAAAAAD//wkAAAABAAAAAAD//woAAAABAAAAAAD//wsAAAABAAAAAAD//wwAAAABAAAAAAD//w0AAAABAAAAAAD//w4AAAABAAAAAAAHAAgAAAAGAAQAAAAOAAUAAAACAAAAAAA=")

[node name="Player" parent="." instance=ExtResource("5_dg3qb")]
position = Vector2(160, 216)

[node name="Goal" parent="." instance=ExtResource("11_2cqxi")]
position = Vector2(60, 76)

[node name="Keys" type="Node" parent="."]

[node name="Key2" parent="Keys" instance=ExtResource("9_knkn0")]
position = Vector2(50, 157)
collision_layer = 0
collision_mask = 2

[node name="Key3" parent="Keys" instance=ExtResource("9_knkn0")]
position = Vector2(256, 157)
collision_layer = 0
collision_mask = 2

[node name="Key4" parent="Keys" instance=ExtResource("9_knkn0")]
position = Vector2(224, 54)
collision_layer = 0
collision_mask = 2

[node name="Entities" type="Node" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="TimeText" type="RichTextLabel" parent="Canvas"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 30.0
grow_horizontal = 2
pivot_offset = Vector2(160, 0)
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = "[wave freq=2 amp=8]1 : 25 . 32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeysText" type="RichTextLabel" parent="Canvas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -30.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("11_at2w1")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[wave]X X -"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Results" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 0
offset_top = -256.0
offset_right = 320.0

[node name="ResultsBackground" type="TextureRect" parent="Canvas/Results"]
layout_mode = 2
offset_right = 320.0
offset_bottom = 256.0
texture = ExtResource("12_wrbck")

[node name="RankText" type="RichTextLabel" parent="Canvas/Results"]
z_index = 5
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.965
offset_top = 38.0
offset_right = 0.03479
offset_bottom = 160.0
grow_horizontal = 0
rotation = 0.0523599
pivot_offset = Vector2(106.585, 61.0003)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 8
theme_override_fonts/normal_font = ExtResource("14_4r1re")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[shake level=10 rate=32]A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopBanner" type="TextureRect" parent="Canvas/Results"]
layout_mode = 0
offset_left = -13.0
offset_top = -36.0
offset_right = 335.0
offset_bottom = 14.0
rotation = 0.0523599
texture = ExtResource("15_mlrue")
stretch_mode = 1

[node name="ResultsText" type="RichTextLabel" parent="Canvas/Results"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -119.0
offset_right = 206.0
offset_bottom = 70.0
grow_vertical = 2
rotation = 0.0523599
theme_override_fonts/normal_font = ExtResource("10_at2w1")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave freq=2 amp=6][color=#555]TIME[/color]   3:45.20

[color=#444]STRIKE  1[/color]   0:10.02
[color=#444]STRIKE  2[/color]   2:20.50
[color=#444]STRIKE  3[/color]   5:53.86"
autowrap_mode = 0
vertical_alignment = 1

[node name="HighScoreText" type="RichTextLabel" parent="Canvas/Results"]
layout_mode = 0
offset_left = 81.0
offset_top = 148.0
offset_right = 241.0
offset_bottom = 183.0
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = "[color=red][tornado radius=3 freq=5]N E W   F A S T E S T   T I M E !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Banner" type="ColorRect" parent="Canvas/Results"]
layout_mode = 0
offset_left = -34.0
offset_top = 205.0
offset_right = 372.0
offset_bottom = 220.0
rotation = 0.0523599
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="BannerText1" type="RichTextLabel" parent="Canvas/Results/Banner"]
layout_mode = 1
offset_right = 406.0
offset_bottom = 15.0
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = " AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  "
fit_content = true
autowrap_mode = 0

[node name="BannerText2" type="RichTextLabel" parent="Canvas/Results/Banner"]
layout_mode = 1
offset_right = 406.0
offset_bottom = 15.0
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = " AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  AMAZING!  "
fit_content = true
autowrap_mode = 0

[node name="Indicators" type="Control" parent="Canvas/Results"]
anchors_preset = 0
offset_top = 174.0
offset_right = 320.0
offset_bottom = 209.0
pivot_offset = Vector2(160, 18)

[node name="RetryIndicator" type="Control" parent="Canvas/Results/Indicators"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 84.0
offset_right = 84.0
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Canvas/Results/Indicators/RetryIndicator"]
layout_mode = 0
offset_left = 6.0
offset_top = -12.0
offset_right = 52.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = "retry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryIcon" type="TextureRect" parent="Canvas/Results/Indicators/RetryIndicator"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(6, 6)
texture = ExtResource("18_fei6a")

[node name="ContinueIndicator" type="Control" parent="Canvas/Results/Indicators"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_right = -128.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="Canvas/Results/Indicators/ContinueIndicator"]
layout_mode = 0
offset_left = 6.0
offset_top = -12.0
offset_right = 69.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("10_yhl0x")
bbcode_enabled = true
text = "continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueIcon" type="TextureRect" parent="Canvas/Results/Indicators/ContinueIndicator"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(6, 6)
texture = ExtResource("19_dsxex")

[editable path="Tilemap"]
